Get user to input port